--- a/gemini API/gemini-api.ipynb
+++ b/gemini API/gemini-api.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from google import genai\n",
-    "client = genai.Client(api_key=\"AIzaSyC3luAXgR9IBw6DLg2Wvjus1mo2Z-CZYcY\")"
+    "client = genai.Client(api_key=\"YOUR_API_KEY")"
    ]
   },
   {
